kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-calculator
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
